strategy data and ui

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,10 +5,18 @@
     <string name="drawer_close">Close drawer</string>
 
     <string name="load_fail">加载失败</string>
+    <string name="news_detail">资讯详情</string>
 
     <string name="news">资讯</string>
     <string name="update">更新</string>
     <string name="strategy">攻略</string>
     <string name="video">视频</string>
     <string name="wallpaper">壁纸</string>
+
+    <string-array name="strategy_type">
+        <item name="strategy_all">全部</item>
+        <item name="strategy_newer">新手</item>
+        <item name="strategy_step">进阶</item>
+        <item name="strategy_skill">技巧</item>
+    </string-array>
 </resources>
