--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,9 @@
     <string name="strategy">攻略</string>
     <string name="video">视频</string>
     <string name="wallpaper">壁纸</string>
+    
+    <string name="anthology">选集</string>
+    <string name="related_video">相关视频</string>
 
     <string-array name="strategy_type">
         <item name="strategy_all">全部</item>
