VideoPlayerActivity loading data ui

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="load_fail">加载失败</string>
     <string name="news_detail">详情</string>
     <string name="video_detail">视频详情</string>
+    <string name="no_related_video">暂无相关视频...</string>
 
     <string name="news">资讯</string>
     <string name="update">更新</string>
