--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,9 @@
     <string name="anthology">选集</string>
     <string name="related_video">相关视频</string>
 
+    <string name="splash_copyright">Copyright &#169; 2016 掌刀 All Rights Reserved\nPowered by Fang.Xu</string>
+    <string name="splash_version">V %1$s</string>
+
     <string-array name="strategy_type">
         <item name="strategy_all">全部</item>
         <item name="strategy_newer">新手</item>
