user entrance and recyclerview item quick click

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="update">更新</string>
     <string name="strategy">攻略</string>
     <string name="video">视频</string>
-    <string name="wallpaper">壁纸</string>
+    <string name="user">我的</string>
     
     <string name="anthology">选集</string>
     <string name="related_video">相关视频</string>
