--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,8 @@
     <string name="watch_video_history">观看记录</string>
     <string name="edit">编辑</string>
     <string name="cancel">取消</string>
+    <string name="select_all">全选</string>
+    <string name="delete">删除</string>
     <string name="cached_video">缓存视频</string>
     <string name="clear_cache">清空缓存</string>
     <string name="my_github">我的GitHub</string>
