--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,9 @@
     <string name="downloading">正在下载</string>
     <string name="waiting">等待中</string>
     <string name="pausing">暂停中</string>
+    <string name="watched_no_video_hint">亲，您还没有观看过视频哦！</string>
+    <string name="cached_no_video_hint">您还没有缓存的视频，快去缓存吧！</string>
+    <string name="caching_no_video_hint">您没有正在缓存的视频，快去缓存吧！</string>
     <string name="begin_all">全部开始</string>
     <string name="pause_all">全部暂停</string>
     <string name="cached_video">缓存视频</string>
